#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999957 released.

        * Mapped Compress::Zlib to IO-Compress.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999956 released.

        * Added prerequisites for Module::Build.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999955 released.

        * Tighter regex matching on module names.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999954 released.

        * Moved CPAN::Meta::Requirements ahead of
          CPAN::Meta in Makefile.PL.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999953 released.

        * Re-arranged some prerequisites in Makefile.PL.

        * Added more prerequisites for Class::Method::Modifiers.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999952 released.

        * Re-arranged some prerequisites in Makefile.PL.


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999951 released.

        * Moved version ahead of Module::Metadata
          in Makefile.PL


2013-11-29  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999950 released.

        * Added Module::CoreList, Module::Load, Module::Metadata
          and version to prerequisites in Makefile.PL


2013-11-28  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999949 released.

        * Installing Module::Load::Conditional
          earlier in Makefile.PL for Unix builds.

