@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.99999957';
+our $VERSION='0.99999958';
 
 
 use 5.005;
